# blocklist-generator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  blocked-names.txt  blocklist-generator.toml  deny.toml  dprint.json
.github/workflows/: audit-on-push.yml  dependency-review.yml  devskim.yml  general.yml  pre-commit.yml  safety.yaml  scheduled-audit.yml  scorecard.yml  validate-licenses.yml
src/: fetch.rs  file_system.rs  main.rs  parse.rs
supply-chain/: audits.toml  config.toml
templates/: blocklist.rpz
