[package]
name = "blocklist-generator"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/blocklist-generator"
# clap v.4.5.2 MSRV is 1.74
rust-version = "1.74"
description = "CLI utility for generating blocklist.rpz files for use with firewalls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11"
humansize = "2.1.3"
hyper = "1.2.0"
log = "0.4"
nom = "7.1.3"
num-format = "0.4.4"
reqwest = "0.11.25"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.10", features = ["parse"] }
url = "2.5.0"

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_core = "0.6.4"
