[package]
name = "blocklist-generator"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/blocklist-generator"
# clap v.4.5.2 MSRV is 1.74
rust-version = "1.74"
description = "CLI utility for generating blocklist.rpz files for use with firewalls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
askama = "0.12.1"
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11"
futures = "0.3.30"
humansize = "2.1.3"
hyper = "1.3.1"
log = "0.4"
nom = "7.1.3"
num-format = "0.4.4"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.59"
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8.12", features = ["parse"] }
url = "2.5.0"

[dev-dependencies]
fake = "2.9.2"
proptest = "1.4.0"
